--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "orm": "^3.2.4",
     "serve-favicon": "~2.4.2"
   }
 }
